highlighted menu item alignment fixed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -329,6 +329,8 @@ header.bk-header {
 .widget.menu .menu-items li {
     padding-left:20px;
     padding-right:20px;
+    display: inline-block;
+    width: 99%;
     // Font Scale-downs
     h4 {
         font-size: bkscale(@font-swatch4-font-size,0.9);
